--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             January 2016 - June 2019
             <ul>
                 <li>Developed a robust framework for the analysis of collision data, which I used to performed detailed studies that resulted in high impact publications.</li>
-                <li>Tutored three summer students, introducing them to the field of data analytics. Extensive use of C++.</li>
+                <li>Tutored three summer students, introducing them to the field of data analytics.</li>
             </ul>
         </li>
     </ul>
